--- a/aaa.html
+++ b/aaa.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a site for free</a></section><section class="cid-t4QX8pozl6 mbr-fullscreen mbr-parallax-background" id="header2-84">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="cid-t4QX8pozl6 mbr-fullscreen mbr-parallax-background" id="header2-84">
 
     
 
@@ -104,7 +104,7 @@
                     </div>                
 
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Smart lighting automation. Have lights illuminate to a set % between nominated times; bathroom lights set to 10% between midnight and 5am. Easily operate light circuits or alternatively control them without being at home at all. Schedule lights to turn on or off for added security, or simply say "Hey Siri, turn off the downstairs lights" to switch off multiple circuits at once. <a href="lighting.html">More info...</a><br></p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Smart lighting automation. Have lights illuminate to a set % between nominated times; bathroom lights set to 10% between midnight and 5am. Easily operate light circuits or alternatively control them without being at home at all. Schedule lights to turn on or off for added security, or simply say "Hey Siri, turn off the downstairs lights" to switch off multiple circuits at once. More info...<br></p>
                     </div>
                 </div>
 
@@ -116,7 +116,7 @@
                         </div>
                     </div>
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Smart window furnishings can be opened or closed on demand, or programmed to operate automatically according to temperature, time of day, or even when the alarm is armed/disarmed. Existing motorised blinds or curtains can be integrated. Alternatively instruct blinds to operate by voice: "Hey Siri, close the west facing blinds".&nbsp;<a href="blinds.html">More info...</a></p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Smart window furnishings can be opened or closed on demand, or programmed to operate automatically according to temperature, time of day, or even when the alarm is armed/disarmed. Existing motorised blinds or curtains can be integrated. Alternatively instruct blinds to operate by voice: "Hey Siri, close the west facing blinds".&nbsp;More info...</p>
                     </div>
                 </div>
             </div>
@@ -135,7 +135,7 @@
                     </div>                
 
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Smart alarm system that automatically arms itself when the last person leaves, or disarms itself when the first person arrives at home. Answer the doorbell using your phone from anywhere. Access CCTV security camera vision with real time notifications of any movement or intrusion. <a href="security.html">More info...</a><br><a href="security.html"><br></a><a href="security.html"><br></a></p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Smart alarm system that automatically arms itself when the last person leaves, or disarms itself when the first person arrives at home. Answer the doorbell using your phone from anywhere. Access CCTV security camera vision with real time notifications of any movement or intrusion. More info...<br><a href="security.html"><br></a><a href="security.html"><br></a></p>
                     </div>
                 </div>
 
@@ -148,7 +148,7 @@
                         </div>
                     </div>
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Smart irrigation controls garden watering via a programmable schedule capable of delaying watering automatically if rain is forecasted in your specific area. Alternatively, turn on/off the sprinklers instantly on demand from HomeKit or control the system by voice: “Hey Siri, water the back garden for 10 minutes”. Save water and money with sprinkler automation. <a href="irrigation.html">More info...</a><br><a href="irrigation.html"><br></a><br></p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Smart irrigation controls garden watering via a programmable schedule capable of delaying watering automatically if rain is forecasted in your specific area. Alternatively, turn on/off the sprinklers instantly on demand from HomeKit or control the system by voice: “Hey Siri, water the back garden for 10 minutes”. Save water and money with sprinkler automation. More info...<br><a href="irrigation.html"><br></a><br></p>
                     </div>
                 </div>
             </div>
@@ -177,7 +177,7 @@
                     </div>                
 
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><a href="thermostat.html">Heating and Cooling</a><br>Smart thermostats can save a lot of money on energy bills. Turn the thermostat on remotely ahead of arriving home so the house is at the perfect temperature, or alternatively turn it off if you've left home in a hurry and forgot. Bring compatible existing air conditioning or central heating systems into the smart home. <a href="thermostat.html">More info...</a></p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Heating and Cooling<br>Smart thermostats can save a lot of money on energy bills. Turn the thermostat on remotely ahead of arriving home so the house is at the perfect temperature, or alternatively turn it off if you've left home in a hurry and forgot. Bring compatible existing air conditioning or central heating systems into the smart home. More info...</p>
                     </div>
                 </div>
 
@@ -189,7 +189,7 @@
                         </div>
                     </div>
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><a href="remote.html">Entertainment</a><br>Control your TV, projector, or amplifier via HomeKit. &nbsp;Capture regularly used buttons from your remote controls and operate them via your phone or by voice. "Hey Siri, turn on TV". <a href="remote.html">More info...</a>&nbsp;<br></p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Entertainment<br>Control your TV, projector, or amplifier via HomeKit. &nbsp;Capture regularly used buttons from your remote controls and operate them via your phone or by voice. "Hey Siri, turn on TV". More info...&nbsp;<br></p>
                     </div>
                 </div>
             </div>
@@ -209,7 +209,7 @@
 
                     <div class="card-box">
                         <p class="mbr-text mbr-section-text mbr-fonts-style display-7">
-                            <a href="garage.html">Garage Door<strong> </strong></a><br>Control garage doors or gates via HomeKit, query their status easily from anywhere. Open the garage to accept delivieries. Compatible with most common brands of garage door or gate motors. Put away the old battery operated remote control fob and instruct the garage door from within your car by saying "Hey Siri, open the garage door". <a href="garage.html">More info...</a></p>
+                            Garage Door<strong> </strong><br>Control garage doors or gates via HomeKit, query their status easily from anywhere. Open the garage to accept delivieries. Compatible with most common brands of garage door or gate motors. Put away the old battery operated remote control fob and instruct the garage door from within your car by saying "Hey Siri, open the garage door". More info...</p>
                     </div>
                 </div>
 
@@ -221,7 +221,7 @@
                         </div>
                     </div>
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><a href="pool.html">Pool and Spa</a><br>Control any swimming pool or spa functions such as temperature, pumps, chlorination. Pre-heat the spa before you come home. "Hey Siri, set the spa temperature to 35 degrees". <a href="pool.html">More info...</a><br></p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Pool and Spa<br>Control any swimming pool or spa functions such as temperature, pumps, chlorination. Pre-heat the spa before you come home. "Hey Siri, set the spa temperature to 35 degrees". More info...<br></p>
                     </div>
                 </div>
             </div>
