--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                     <a href="index.html">
                        <picture>
 <source type="image/webp" srcset="assets/images/webp/output-onlinepngtools-1-removebg-preview-2-96x88.webp">
-<img src="assets/images/output-onlinepngtools-1-removebg-preview-2-96x88.png" alt="Mobirise" title="" style="height: 3.8rem;">
+<img src="assets/images/output-onlinepngtools-1-removebg-preview-2-96x88.png" alt="House-Mate Automation" title="" style="height: 3.8rem;">
 
 </picture>
                     </a>
