updated per hrefs suggestions

--- a/blinds.html
+++ b/blinds.html
@@ -184,7 +184,7 @@ Now it's possible with small motors that sit in the headrail and control the til
 
 <picture>
 <source type="image/webp" srcset="assets/images/webp/blind4-220x220.webp">
-<img src="assets/images/blind4-220x220.png" alt="House-mate" title="">
+<img src="assets/images/blind4-220x220.jpg" alt="House-mate" title="">
 
 </picture>
 
