--- a/cbus.html
+++ b/cbus.html
@@ -142,7 +142,7 @@
                        
 <picture>
 <source type="image/webp" srcset="assets/images/webp/cb3-220x220.webp">
-<img src="assets/images/cb3-220x220.png" alt="House-mate" title="">
+<img src="assets/images/cb3-220x220.jpg" alt="House-mate" title="">
 
 </picture>
                     </div>
