--- a/irrigation.html
+++ b/irrigation.html
@@ -136,7 +136,7 @@
                         
 <picture>
 <source type="image/webp" srcset="assets/images/webp/asd-220x220.webp">
-<img src="assets/images/asd-220x220.png" alt="House-mate" title="">
+<img src="assets/images/asd-220x220.jpg" alt="House-mate" title="">
 
 </picture>
                     </div>
@@ -154,7 +154,7 @@
                         
 <picture>
 <source type="image/webp" srcset="assets/images/webp/ir2-220x220.webp">
-<img src="assets/images/ir2-220x220.png" alt="House-mate" title="">
+<img src="assets/images/ir2-220x220.jpg" alt="House-mate" title="">
 
 </picture>
                     </div>
