--- a/lighting.html
+++ b/lighting.html
@@ -135,7 +135,7 @@
                         
 <picture>
 <source type="image/webp" srcset="assets/images/webp/sw1-220x220.webp">
-<img src="assets/images/sw1-220x220.png" alt="House-mate" title="">
+<img src="assets/images/sw1-220x220.jpg" alt="House-mate" title="">
 
 </picture>
                     </div>
@@ -153,7 +153,7 @@
 
 <picture>
 <source type="image/webp" srcset="assets/images/webp/b991864c-4d64-4345-952d-18fb256d85d0-2-220x220.webp">
-<img src="assets/images/b991864c-4d64-4345-952d-18fb256d85d0-2-220x220.png" alt="House-mate" title="">
+<img src="assets/images/b991864c-4d64-4345-952d-18fb256d85d0-2-220x220.jpg" alt="House-mate" title="">
 
 </picture>
                     </div>
