--- a/power.html
+++ b/power.html
@@ -131,8 +131,8 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <picture>
-                            <source type="image/webp" srcset="assets/images/webp/zwave-220x220.webp">
-                            <img src="assets/images/zwave-220x220.jpg" alt="House-mate" title="">
+                            <source type="image/webp" srcset="assets/images/webp/smart-on-wall-power-outlets.webp">
+                            <img src="assets/images/smart-on-wall-power-outlets.jpg" alt="House-mate" title="Smart on-wall power point with USB charger">
                         </picture>
                     </div>
                     <div class="card-box">
@@ -147,8 +147,8 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <picture>
-                            <source type="image/webp" srcset="assets/images/webp/pw2-220x220.webp">
-                            <img src="assets/images/pw2-220x220.png" alt="House-mate" title="">
+                            <source type="image/webp" srcset="assets/images/webp/many-compatible-smart-power-points.webp">
+                            <img src="assets/images/many-compatible-smart-power-points.png" alt="House-mate" title="Smart power points are simple to install">
                         </picture>
                     </div>
                     <div class="card-box">
@@ -164,8 +164,8 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <picture>
-                            <source type="image/webp" srcset="assets/images/webp/hk3-220x220.webp">
-                            <img src="assets/images/hk3-220x220.png" alt="House-mate" title="">
+                            <source type="image/webp" srcset="assets/images/webp/power-outlet-control-using-homekit.webp">
+                            <img src="assets/images/power-outlet-control-using-homekit.png" alt="House-mate" title="HomeKit interface is simple and friendly to use">
                         </picture>
                     </div>
                     <div class="card-box">
