--- a/blinds.html
+++ b/blinds.html
@@ -140,8 +140,8 @@
                        
 
 <picture>
-<source type="image/webp" srcset="assets/images/webp/bl1-220x220.webp">
-<img src="assets/images/bl1-220x220.png" alt="House-mate" title="">
+<source type="image/webp" srcset="assets/images/webp/motorised-roller-blind-solutions-available-220x220.webp">
+<img src="assets/images/motorised-roller-blind-solutions-available-220x220.png" alt="House-mate" title="Motorised roller blind solutions are compatible">
 
 </picture>
 
@@ -163,8 +163,8 @@
 
 
 <picture>
-<source type="image/webp" srcset="assets/images/webp/bl2-220x220.webp">
-<img src="assets/images/bl2-220x220.png" alt="House-mate" title="">
+<source type="image/webp" srcset="assets/images/webp/motorised-venetian-blind-solutions-available-220x220.webp">
+<img src="assets/images/motorised-venetian-blind-solutions-available-220x220.png" alt="House-mate" title="Motorised venetian blind solutions available">
 
 </picture>
 
@@ -183,8 +183,8 @@ Now it's possible with small motors that sit in the headrail and control the til
                         
 
 <picture>
-<source type="image/webp" srcset="assets/images/webp/blind4-220x220.webp">
-<img src="assets/images/blind4-220x220.jpg" alt="House-mate" title="">
+<source type="image/webp" srcset="assets/images/webp/Blind-control-using-apple-homekit-220x220.webp">
+<img src="assets/images/blind-control-using-apple-homekit-220x220.jpg" alt="House-mate" title="Blind control is simple within Apple HomeKit">
 
 </picture>
 
