--- a/thermostat.html
+++ b/thermostat.html
@@ -132,8 +132,8 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <picture>
-                            <source type="image/webp" srcset="assets/images/webp/screen-shot-2021-04-04-at-5.11.17-pm-220x220.webp">
-                            <img src="assets/images/screen-shot-2021-04-04-at-5.11.17-pm-220x220.png" alt="House-mate" title="">
+                            <source type="image/webp" srcset="assets/images/webp/most-smart-thermostat-brands-compatible-220x220.webp">
+                            <img src="assets/images/most-smart-thermostat-brands-compatible-220x220.png" alt="House-mate" title="Most smart theremostats are compatible">
                         </picture>
                     </div>
                     <div class="card-box">
@@ -149,8 +149,8 @@ The Nest thermostat is popular (due to its sleek appearance at ~$350 unfitted). 
                 <div class="card-wrapper">
                     <div class="card-img">
                         <picture>
-                            <source type="image/webp" srcset="assets/images/webp/ther2-220x220.webp">
-                            <img src="assets/images/ther2-220x220.png" alt="House-mate" title="">
+                            <source type="image/webp" srcset="assets/images/webp/most-wifi-smart-controllers-compatible-220x220.webp">
+                            <img src="assets/images/most-wifi-smart-controllers-compatible-220x220.png" alt="House-mate" title="Mitsubishi, Daikin, Rinnai and many other smart wifi controllers are compatible">
                         </picture>
                     </div>
                     <div class="card-box">
@@ -164,8 +164,8 @@ The Nest thermostat is popular (due to its sleek appearance at ~$350 unfitted). 
                 <div class="card-wrapper">
                     <div class="card-img">
                         <picture>
-                            <source type="image/webp" srcset="assets/images/webp/screen-shot-2021-04-13-at-10.34.54-pm-220x220.webp">
-                            <img src="assets/images/screen-shot-2021-04-13-at-10.34.54-pm-220x220.png" alt="House-mate" title="">
+                            <source type="image/webp" srcset="assets/images/webp/thermostat-control-using-apple-homekit-220x220.webp">
+                            <img src="assets/images/thermostat-control-using-apple-homekit-220x220.png" alt="House-mate" title="Theremostat control within Apple HomeKit is simple and stylish">
                         </picture>
                     </div>
                     <div class="card-box">
