--- a/security.html
+++ b/security.html
@@ -133,8 +133,8 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <picture>
-                            <source type="image/webp" srcset="assets/images/webp/sec1-227x220.webp">
-                            <img src="assets/images/sec1-227x220.png" alt="House-mate" title="">
+                            <source type="image/webp" srcset="assets/images/webp/most-digital-camera-brands-are-compatible-220x220.webp">
+                            <img src="assets/images/most-digital-camera-brands-are-compatible-220x220.png" alt="House-mate" title="Many brands of digital cameras are compatible with House-mate">
                         </picture>
                     </div>
                     <div class="card-box">
@@ -149,8 +149,8 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <picture>
-                            <source type="image/webp" srcset="assets/images/webp/sec2-226x220.webp">
-                            <img src="assets/images/sec2-226x220.png" alt="House-mate" title="">
+                            <source type="image/webp" srcset="assets/images/webp/door-and-window-sensors-available-220x220.webp">
+                            <img src="assets/images/door-and-window-sensors-available-220x220.png" alt="House-mate" title="Door and window sensors are compatible with House-mate solutions">
                         </picture>
                     </div>
                     <div class="card-box">
@@ -165,8 +165,8 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <picture>
-                            <source type="image/webp" srcset="assets/images/webp/sec4-1-225x220.webp">
-                            <img src="assets/images/sec4-1-225x220.png" alt="House-mate" title="">
+                            <source type="image/webp" srcset="assets/images/webp/security-using-apple-homekit-220x220.webp">
+                            <img src="assets/images/security-using-apple-homekit-220x220.png" alt="House-mate" title="Security using the Apple HomeKit interface is very intuitive">
                         </picture>
                     </div>
                     <div class="card-box">
