--- a/pool.html
+++ b/pool.html
@@ -121,8 +121,8 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <picture>
-                            <source type="image/webp" srcset="assets/images/webp/download-1-228x220.webp">
-                            <img src="assets/images/download-1-228x220.jpg" alt="House-mate" title="">
+                            <source type="image/webp" srcset="assets/images/webp/save-time-managing-your-pool-using-apple-homekit-220x220.webp">
+                            <img src="assets/images/save-time-managing-your-pool-using-apple-homekit-220x220.jpg" alt="House-mate" title="Save time and money managing your pool and spa">
                         </picture>
                     </div>
                     <div class="card-box">
@@ -137,8 +137,8 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <picture>
-                            <source type="image/webp" srcset="assets/images/webp/aqualink2-261x253.webp">
-                            <img src="assets/images/aqualink2-261x253.png" alt="House-mate" title="">
+                            <source type="image/webp" srcset="assets/images/webp/control-pool-functions-remotely-220x220.webp">
+                            <img src="assets/images/control-pool-functions-remotely-220x220.png" alt="House-mate" title="Control pool temperature and heating.  Turn on/off pumps">
                         </picture>
                     </div>
                     <div class="card-box ">
@@ -153,8 +153,8 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <picture>
-                            <source type="image/webp" srcset="assets/images/webp/aqualinkm8-268x258.webp">
-                            <img src="assets/images/aqualinkm8-268x258.png" alt="House-mate" title="">
+                            <source type="image/webp" srcset="assets/images/webp/pool-control-using-apple-homekit-220x220.webp">
+                            <img src="assets/images/pool-control-using-apple-homekit-220x220.png" alt="House-mate" title="Apple HomeKit interface for pool control is very stylish">
                         </picture>
                     </div>
                     <div class="card-box">
