--- a/remote.html
+++ b/remote.html
@@ -131,8 +131,8 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <picture>
-                            <source type="image/webp" srcset="assets/images/webp/remotes-342x217.webp">
-                            <img src="assets/images/remotes-342x217.jpg" alt="House-mate" title="">
+                            <source type="image/webp" srcset="assets/images/webp/operate-remote-controls-using-apple-homekit.webp">
+                            <img src="assets/images/operate-remote-controls-using-apple-homekit.jpg" alt="House-mate" title="Learn buttons from remote controls and operate them from within Apple Homekit or via Siri">
                         </picture>
                     </div>
                     <div class="card-box">
