--- a/cbus.html
+++ b/cbus.html
@@ -123,8 +123,8 @@
                        
 
 <picture>
-<source type="image/webp" srcset="assets/images/webp/cbus-5500-220x220.webp">
-<img src="assets/images/cbus-5500-220x220.png" alt="House-mate" title="">
+<source type="image/webp" srcset="assets/images/webp/connect-cbus-to-apple-homekit-220x220.webp">
+<img src="assets/images/connect-cbus-to-apple-homekit-220x220.png" alt="House-mate" title="Connect CBUS to Apple HomeKit">
 
 </picture>
 
@@ -159,8 +159,8 @@
                     <div class="card-img">
                        
 <picture>
-<source type="image/webp" srcset="assets/images/webp/hk3-220x220.webp">
-<img src="assets/images/hk3-220x220.png" alt="House-mate" title="">
+<source type="image/webp" srcset="assets/images/webp/cbus-blended-into-apple-homekit-environment-220x220.webp">
+<img src="assets/images/cbus-blended-into-apple-homekit-environment-220x220.png" alt="House-mate" title="Blend CBUS equipment with other HomeKit devices such as TVs and thermostats">
 
 </picture>
 
