--- a/sensors.html
+++ b/sensors.html
@@ -120,8 +120,8 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <picture>
-                            <source type="image/webp" srcset="assets/images/webp/network-sensor-220x220.webp">
-                            <img src="assets/images/network-sensor-220x220.jpg" alt="House-mate" title="">
+                            <source type="image/webp" srcset="assets/images/webp/network-sensors-using-apple-homekit-220x220.webp">
+                            <img src="assets/images/network-sensors-using-apple-homekit-220x220.jpg" alt="House-mate" title="Network sensors using Apple HomeKit">
                         </picture>
                     </div>
                     <div class="card-box">
