--- a/cbus.html
+++ b/cbus.html
@@ -141,8 +141,8 @@
                     <div class="card-img">
                        
 <picture>
-<source type="image/webp" srcset="assets/images/webp/cb3-220x220.webp">
-<img src="assets/images/cb3-220x220.jpg" alt="House-mate" title="">
+<source type="image/webp" srcset="assets/images/webp/keep-existing-cbus-wall-plates-220x220.webp">
+<img src="assets/images/keep-existing-cbus-wall-plates-220x220.jpg" alt="House-mate" title="Keep existing CBUS wall switches">
 
 </picture>
                     </div>
