fixed png references to jpg

--- a/power.html
+++ b/power.html
@@ -148,7 +148,7 @@
                     <div class="card-img">
                         <picture>
                             <source type="image/webp" srcset="assets/images/webp/many-compatible-smart-power-points-220x220.webp">
-                            <img src="assets/images/many-compatible-smart-power-points-220x220.png" alt="House-mate" title="Smart power points are simple to install">
+                            <img src="assets/images/many-compatible-smart-power-points-220x220.jpg" alt="House-mate" title="Smart power points are simple to install">
                         </picture>
                     </div>
                     <div class="card-box">
