--- a/security.html
+++ b/security.html
@@ -150,7 +150,7 @@
                     <div class="card-img">
                         <picture>
                             <source type="image/webp" srcset="assets/images/webp/door-and-window-sensors-available-220x220.webp">
-                            <img src="assets/images/door-and-window-sensors-available-220x220.png" alt="House-mate" title="Door and window sensors are compatible with House-mate solutions">
+                            <img src="assets/images/door-and-window-sensors-available-220x220.jpg" alt="House-mate" title="Door and window sensors are compatible with House-mate solutions">
                         </picture>
                     </div>
                     <div class="card-box">
