--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <html>
 <head>
 <link rel="canonical" href="https://house-mate.com.au/index.html" />
-<meta property="og:type" content="website" />
 <meta property="og:title" content="House-mate Smart Home Automation">
 <meta property="og:description" content="Affordable and centralised home automation using Apple HomeKit. Convenience, security, and peace of mind with a smart home by House-mate.">
 <meta property="og:image" content="https://house-mate.com.au/assets/images/webp/og-image-facebook.webp">
-<meta property="og:url" content="https://house-mate.com.au/index.html">
+<meta property="og:url" content="https://house-mate.com.au/index.html" />
 <meta name="twitter:title" content="House-mate Smart Home Automation">
 <meta name="twitter:description" content="Affordable and centralised home automation using Apple HomeKit. Convenience, security, and peace of mind with a smart home by House-mate.">
 <meta name="twitter:url" content="https://house-mate.com.au/assets/images/webp/twitter-image.webp">
