--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <meta property="og:image" content="https://house-mate.com.au/assets/images/webp/og-image-facebook.webp">
 <meta property="og:url" content="https://house-mate.com.au/index.html" />
 <meta name="twitter:title" content="House-mate Smart Home Automation">
+<meta name="twitter:site" content="@HousemateAU">
 <meta name="twitter:description" content="Affordable and centralised home automation using Apple HomeKit. Convenience, security, and peace of mind with a smart home by House-mate.">
 <meta name="twitter:url" content="https://house-mate.com.au/assets/images/webp/twitter-image.webp">
 <meta name="twitter:card" content="House-mate are innovative home automation architects based in Melbourne Australia">
