--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
 <meta property="og:title" content="House-mate Smart Home Automation">
 <meta property="og:description" content="Affordable and centralised home automation using Apple HomeKit. Convenience, security, and peace of mind with a smart home by House-mate.">
 <meta property="og:type" content="image/webp">
-
 <meta property="og:image" content="https://house-mate.com.au/assets/images/webp/og-image-facebook.webp">
 <meta property="og:url" content="https://house-mate.com.au/index.html" />
-<meta name="twitter:title" content="House-mate Smart Home Automation">
-<meta name="twitter:site" content="@HousemateAU">
-<meta name="twitter:description" content="Affordable and centralised home automation using Apple HomeKit. Convenience, security, and peace of mind with a smart home by House-mate.">
-<meta name="twitter:image" content="https://house-mate.com.au/assets/images/webp/twitter-image.webp">
-<meta name="twitter:card" content="House-mate are innovative home automation architects based in Melbourne Australia">
+
+<meta name="twitter:title" content="House-mate Smart Home Automation" />
+<meta name="twitter:site" content="@HousemateAU" />
+<meta name="twitter:description" content="Affordable and centralised home automation using Apple HomeKit. Convenience, security, and peace of mind with a smart home by House-mate." />
+<meta name="twitter:image" content="https://house-mate.com.au/assets/images/webp/twitter-image.jpg" />
+<meta name="twitter:card" content="summary_large_image" />
+
 <link rel="apple-touch-icon" sizes="180x180 href="https://house-mate.com.au/assets/images/webp/apple-touch-icon-180x180.webp">
 <link rel="apple-touch-icon" href="https://house-mate.com.au/assets/images/webp/apple-touch-icon.webp">
 <!-- Global site tag (gtag.js) - Google Analytics -->
