--- a/security.html
+++ b/security.html
@@ -115,7 +115,7 @@
 </span><span style="font-size: 1rem;">Conveniently operate your alarm system from anywhere using the HomeKit™ app or by voice using Siri™. Google and Alexa solutions also available.</span></p><p><span style="font-size: 1rem;">House-mate smart security solutions can arm the home automatically when the last person leaves and disarm the alarm when the first person arrives home.</span><br></p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
-                     <p><span style="font-size: 1rem;">Setup automations to occur when the alarm is armed , eg: turn off lights, the heating, and close the blinds. </span></p><p><span style="font-size: 1rem;">Integrate smoke detectors, movement sensors, cameras, door or window sensors.  All can send notifications if triggered when the house is armed.&nbsp;</span><br></p><p><span style="font-size: 1rem;">Keyless entry compatibility. Numerous locks from a variety of manufacturers available to suit different designs and tastes.</span><br></p>
+                     <p><span style="font-size: 1rem;">Setup automations to occur when the alarm is armed , eg: turn off lights, the heating, and close the blinds. </span></p><p><span style="font-size: 1rem;">Connected cameras, smoke detectors, movement sensors, door or window sensors.  All can send notifications if triggered when the house is armed.&nbsp;</span><br></p><p><span style="font-size: 1rem;">Keyless entry compatibility. Numerous locks from a variety of manufacturers available to suit different designs and tastes.</span><br></p>
                 </div>
                 
             </div>
