--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
-                    Contact Us</h1>
+                    Live Connected | Contact Us</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
                     We would love to hear from you. &nbsp;Please get in touch for anything big or small.</p>
@@ -222,7 +222,7 @@
             
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    <br>© Copyright 2022 House-mate Automations</p>
+                    <br>© House-mate Automations | Connected Australia</p>
             </div>
         </div>
     </div>
