--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <link rel="canonical" href="https://house-mate.com.au/index.html" />
-<meta property="og:title" content="House-mate Smart Home Automation">
+<meta property="og:title" content="House-mate Smart Home Automation | Homekit Australia">
 <meta property="og:description" content="Affordable and centralised home automation using Apple HomeKit. Convenience, security, and peace of mind with a smart home by House-mate.">
 <meta property="og:type" content="image/webp">
 <meta property="og:image" content="https://house-mate.com.au/assets/images/webp/og-image-facebook.webp">
@@ -11,7 +11,7 @@
 
 <meta name="twitter:title" content="House-mate Smart Home Automation" />
 <meta name="twitter:site" content="@HousemateAU" />
-<meta name="twitter:description" content="Affordable and centralised home automation using Apple HomeKit. Convenience, security, and peace of mind with a smart home by House-mate." />
+<meta name="twitter:description" content="Affordable and centralised home automation using Apple HomeKit Australia. Convenience, security, and peace of mind with a smart home by House-mate." />
 <meta name="twitter:image" content="https://house-mate.com.au/assets/images/twitter-image.jpg" />
 <meta name="twitter:card" content="summary_large_image" />
 
