--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <meta name="twitter:title" content="House-mate Smart Home Automation" />
 <meta name="twitter:site" content="@HousemateAU" />
-<meta name="twitter:description" content="Affordable and centralised home automation using Apple HomeKit Australia. Convenience, security, and peace of mind with a smart home by House-mate." />
+<meta name="twitter:description" content="Affordable and centralised home automation using Apple HomeKit Australia. Convenience, security, and peace of mind with a zwave or wifi smart home by House-mate." />
 <meta name="twitter:image" content="https://house-mate.com.au/assets/images/twitter-image.jpg" />
 <meta name="twitter:card" content="summary_large_image" />
 
