--- a/security.html
+++ b/security.html
@@ -34,7 +34,7 @@
   <meta name="description" content="Apple HomeKit connected alarm systems. Smart security system solutions. Automatically arm when the last person leaves. Real time security notifications.">
   
   
-  <title>House-mate Security Automation</title>
+  <title>Home Security Automation</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -146,13 +146,13 @@
                     <div class="card-img">
                         <picture>
                             <source type="image/webp" srcset="assets/images/webp/most-digital-camera-brands-are-compatible-220x220.webp">
-                            <img src="assets/images/most-digital-camera-brands-are-compatible-220x220.png" alt="House-mate" title="Many brands of digital cameras are compatible with House-mate">
+                            <img src="assets/images/most-digital-camera-brands-are-compatible-220x220.png" alt="House-mate" title="Many brands of digital IP cameras are compatible with House-mate">
                         </picture>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Unparalled security</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Affordable cameras that can detect motion and record whats happening. See real time what every camera is seeing. House-mate integrates with industry leading alarm systems such as Paradox, Bosch and more...</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Affordable IP cameras that can detect motion and record whats happening. See real time what every camera is seeing. House-mate integrates with industry leading alarm systems such as Paradox, Bosch and more...</p>
                     </div>
                 </div>
             </div>
