--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <link rel="canonical" href="https://house-mate.com.au/contact.html" />
-<meta property="og:title" content="House-mate Smart Home Automation">
+<meta property="og:title" content="House-mate Automation | Smart home products">
 <meta property="og:description" content="Affordable and centralised home automation using Apple HomeKit. Convenience, security, and peace of mind with a smart home by House-mate.">
 <meta property="og:type" content="image/webp">
 <meta property="og:image" content="https://house-mate.com.au/assets/images/webp/og-image-facebook.webp">
@@ -34,7 +34,7 @@
   <meta name="description" content="Contact Us at House-mate with any questions that you may have about smart homes or home automation.  We are happy to help.">
   
   
-  <title>House-mate Contact</title>
+  <title>Contact Us | Smart Home Products | House-mate</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
