--- a/irrigation.html
+++ b/irrigation.html
@@ -34,7 +34,7 @@
   <meta name="description" content="Smart irrigation controller | Irrigation solutions compatible with Apple HomeKit or Google Home | Control sprinkler valves | Smart home irrigation system">
   
   
-  <title>Smarthome Irrigation Controller | Irrigation Automation</title>
+  <title>Smart Irrigation Controller | Irrigation Automation</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
