--- a/cbus.html
+++ b/cbus.html
@@ -4,7 +4,7 @@
 <head>
 <link rel="canonical" href="https://house-mate.com.au/cbus.html" />
 <meta property="og:title" content="House-mate Smart Home Automation">
-<meta property="og:description" content="Affordable and centralised home automation using Apple HomeKit. Convenience, security, and peace of mind with a smart home by House-mate.">
+<meta property="og:description" content="Affordable and centralised CBUS home automation using Apple HomeKit. Convenience, security, and peace of mind with a smart home by House-mate.">
 <meta property="og:type" content="image/webp">
 <meta property="og:image" content="https://house-mate.com.au/assets/images/webp/og-image-facebook.webp">
 <meta property="og:url" content="https://house-mate.com.au/cbus.html" />
@@ -33,7 +33,7 @@
   <meta name="description" content="CBUS integration into Apple HomeKit and Google Home. Make your CBUS installation much smarter. Enable voice control of any connected CBUS device">
   
   
-  <title>House-mate CBUS Automation</title>
+  <title>CBUS Automation | CBUS HomeKit | CBUS Electrician</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -110,7 +110,7 @@
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
-                     <p>House-mate integration solutions connect CBUS controllers to your Wi-Fi network and enable full control via HomeKit™ or Siri™.</p><p>Do you have an CBUS system that stands alone? &nbsp;<span style="font-size: 1rem;">Why not integrate it into HomeKit and control any element of your CBUS home via your mobile or voice.&nbsp;</span></p>
+                     <p>House-mate integration solutions connect CBUS controllers to your Wi-Fi network and enable full control via HomeKit™ or Siri™, or Google Home</p><p>Do you have an CBUS system that stands alone? &nbsp;<span style="font-size: 1rem;">Why not integrate it into HomeKit and control any element of your CBUS home via your mobile or voice.&nbsp;</span></p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
                      <p><span style="font-size: 1rem;">The Clipsal CNI bridges connectivity between your CBUS installation and your local network. &nbsp;Our s</span><span style="font-size: 1rem;">ervice includes all installation, programming and configuration of your Groups and Devices.&nbsp;</span></p>
